// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should handle first page click properly 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 klvluR"
    data-testid="Pagination"
  >
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__first"
      type="button"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-gsTCUz jsttWF mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
    >
      <div
        class="PaginationSearch__PaginationSearchButtonStyled-rcir65-1 ftyWKb"
        data-testid="PaginationSearchButton"
      >
        <span
          data-testid="PaginationSearch__toggle"
        >
           
          <span>
            ...
          </span>
           
        </span>
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        99
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        100
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
      >
        101
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        102
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        103
      </div>
      <div
        class="PaginationSearch__PaginationSearchButtonStyled-rcir65-1 ftyWKb"
        data-testid="PaginationSearchButton"
      >
        <span
          data-testid="PaginationSearch__toggle"
        >
           
          <span>
            ...
          </span>
           
        </span>
      </div>
    </div>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-gsTCUz cmyhNZ ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__last"
      type="button"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should handle last page click properly 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 klvluR"
    data-testid="Pagination"
  >
    <div
      class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
    >
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        3
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        7
      </div>
      <div
        class="PaginationSearch__PaginationSearchButtonStyled-rcir65-1 ftyWKb"
        data-testid="PaginationSearchButton"
      >
        <span
          data-testid="PaginationSearch__toggle"
        >
           
          <span>
            ...
          </span>
           
        </span>
      </div>
    </div>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-gsTCUz cmyhNZ ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__last"
      type="button"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should handle next page click properly 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 klvluR"
    data-testid="Pagination"
  >
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-gsTCUz jsttWF mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
    >
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        3
      </div>
    </div>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-gsTCUz cmyhNZ ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should handle page selection properly 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 klvluR"
    data-testid="Pagination"
  >
    <div
      class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
    >
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        3
      </div>
    </div>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-gsTCUz cmyhNZ ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should handle previous page click properly 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 klvluR"
    data-testid="Pagination"
  >
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__first"
      type="button"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-gsTCUz jsttWF mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
    >
      <div
        class="PaginationSearch__PaginationSearchButtonStyled-rcir65-1 ftyWKb"
        data-testid="PaginationSearchButton"
      >
        <span
          data-testid="PaginationSearch__toggle"
        >
           
          <span>
            ...
          </span>
           
        </span>
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        7
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        8
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
      >
        9
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        10
      </div>
    </div>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-gsTCUz cmyhNZ ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render first button if pagination buttons include 1 (first page) 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 klvluR"
    data-testid="Pagination"
  >
    <div
      class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
    >
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        3
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        7
      </div>
      <div
        class="PaginationSearch__PaginationSearchButtonStyled-rcir65-1 ftyWKb"
        data-testid="PaginationSearchButton"
      >
        <span
          data-testid="PaginationSearch__toggle"
        >
           
          <span>
            ...
          </span>
           
        </span>
      </div>
    </div>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-gsTCUz cmyhNZ ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__last"
      type="button"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render first button if pagination buttons include 1 (second page) 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 klvluR"
    data-testid="Pagination"
  >
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-gsTCUz jsttWF mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
    >
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        3
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        7
      </div>
      <div
        class="PaginationSearch__PaginationSearchButtonStyled-rcir65-1 ftyWKb"
        data-testid="PaginationSearchButton"
      >
        <span
          data-testid="PaginationSearch__toggle"
        >
           
          <span>
            ...
          </span>
           
        </span>
      </div>
    </div>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-gsTCUz cmyhNZ ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__last"
      type="button"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render first button if pagination buttons include 1 (third page) 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 klvluR"
    data-testid="Pagination"
  >
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-gsTCUz jsttWF mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
    >
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
      >
        3
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        7
      </div>
      <div
        class="PaginationSearch__PaginationSearchButtonStyled-rcir65-1 ftyWKb"
        data-testid="PaginationSearchButton"
      >
        <span
          data-testid="PaginationSearch__toggle"
        >
           
          <span>
            ...
          </span>
           
        </span>
      </div>
    </div>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-gsTCUz cmyhNZ ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__last"
      type="button"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render first button if pagination buttons include the last page (last page) 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 klvluR"
    data-testid="Pagination"
  >
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__first"
      type="button"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-gsTCUz jsttWF mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
    >
      <div
        class="PaginationSearch__PaginationSearchButtonStyled-rcir65-1 ftyWKb"
        data-testid="PaginationSearchButton"
      >
        <span
          data-testid="PaginationSearch__toggle"
        >
           
          <span>
            ...
          </span>
           
        </span>
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        7
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        8
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        9
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
      >
        10
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render first button if pagination buttons include the last page (second-to-last page) 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 klvluR"
    data-testid="Pagination"
  >
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__first"
      type="button"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-gsTCUz jsttWF mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
    >
      <div
        class="PaginationSearch__PaginationSearchButtonStyled-rcir65-1 ftyWKb"
        data-testid="PaginationSearchButton"
      >
        <span
          data-testid="PaginationSearch__toggle"
        >
           
          <span>
            ...
          </span>
           
        </span>
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        7
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        8
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
      >
        9
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        10
      </div>
    </div>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-gsTCUz cmyhNZ ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render first button if pagination buttons include the last page (third-to-last page) 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 klvluR"
    data-testid="Pagination"
  >
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__first"
      type="button"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-gsTCUz jsttWF mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
    >
      <div
        class="PaginationSearch__PaginationSearchButtonStyled-rcir65-1 ftyWKb"
        data-testid="PaginationSearchButton"
      >
        <span
          data-testid="PaginationSearch__toggle"
        >
           
          <span>
            ...
          </span>
           
        </span>
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        7
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
      >
        8
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        9
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        10
      </div>
    </div>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-gsTCUz cmyhNZ ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render next button on last page 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 klvluR"
    data-testid="Pagination"
  >
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__first"
      type="button"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-gsTCUz jsttWF mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
    >
      <div
        class="PaginationSearch__PaginationSearchButtonStyled-rcir65-1 ftyWKb"
        data-testid="PaginationSearchButton"
      >
        <span
          data-testid="PaginationSearch__toggle"
        >
           
          <span>
            ...
          </span>
           
        </span>
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        7
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        8
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        9
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
      >
        10
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render previous buttons on first page 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 klvluR"
    data-testid="Pagination"
  >
    <div
      class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
    >
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        3
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        7
      </div>
      <div
        class="PaginationSearch__PaginationSearchButtonStyled-rcir65-1 ftyWKb"
        data-testid="PaginationSearchButton"
      >
        <span
          data-testid="PaginationSearch__toggle"
        >
           
          <span>
            ...
          </span>
           
        </span>
      </div>
    </div>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-gsTCUz cmyhNZ ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__last"
      type="button"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 klvluR"
    data-testid="Pagination"
  >
    <div
      class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
    >
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
      >
        3
      </div>
    </div>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-gsTCUz cmyhNZ ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render condensed 1`] = `
<DocumentFragment>
  <div
    class="CompactPagination__Wrapper-sc-19zmly1-0 dfaxFN"
    data-testid="Pagination"
  >
    <div
      class="flex items-center py-3 px-5 rounded bg-theme-primary-100 text-theme-primary-600"
    >
      Page 1 of 3
    </div>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN w-8"
      data-testid="CompactPagination__next"
      type="button"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="Button__StyledButton-mdtvtf-0 lmPdYN w-8"
      data-testid="CompactPagination__last"
      type="button"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
